@@ -1,6 +1,6 @@
 // This may look like C code, but it is really -*- C++ -*-
 //
-// Copyright Bob Friesenhahn, 1999, 2000, 2001
+// Copyright Bob Friesenhahn, 1999, 2000, 2001, 2002
 //
 // Definition of Image, the representation of a single image in Magick++
 //
@@ -24,7 +24,6 @@
 namespace Magick
 {
   // Forward declarations
-  class Image;
   class ImageRef;
 
   extern const std::string borderGeometryDefault;
@@ -633,6 +632,10 @@ namespace Magick
     // Compression type
     void            compressType ( CompressionType compressType_ );
     CompressionType compressType ( void ) const;
+
+    // Enable printing of debug messages from ImageMagick
+    void            debug ( bool flag_ );
+    bool            debug ( void ) const;
 
     // Vertical and horizontal resolution in pixels of the image
     void            density ( const Geometry &geomery_ );
